Removes duplicate of Knockout library

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -65,7 +65,7 @@
   <script src="scripts/libs/i.js"></script>
 
   <!-- knockout -->
-  <script src="scripts/libs/knockout/knockout.js"></script>
+  <script src="scripts/libs/knockout.js"></script>
   <script src="scripts/libs/knockout/ko-shortcuts.js"></script>
   <script src="scripts/libs/knockout/ko-template-engine.js"></script>
   <!-- custom binders -->
