Simplifies and improves the application start.

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -58,7 +58,6 @@
   <!-- components -->
   <script src="scripts/shared/components/extend.js"></script>
   <script src="scripts/shared/components/events.js"></script>
-
   <script src="scripts/areas/common/setup.js"></script>
 
   <!-- utility function for localization -->
@@ -94,8 +93,7 @@
   <script src="scripts/areas/public/locale/it.js"></script>
   <script src="scripts/areas/public/locale/pl.js"></script>
 
-  <!--in the simplest scenario, the router must be loaded when the routes have been defined-->
-  <script src="scripts/areas/common/router.js"></script>
-  <script src="scripts/areas/public/ready.js"></script>
+  <!--start the application area when ready-->
+  <script src="scripts/areas/public/start.js"></script>
 </body>
 </html>
